Fixed missing styles in Nextra (#89)

--- a/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
@@ -1,6 +1,9 @@
 ---
 sidebarTitle: Agents
 ---
+
+import "@speakeasy-api/docs-md-react/nextra.css";
+
 import {
   CodeSample,
   ExpandableBreakout,
