--- a/examples/nextra/mistral/src/app/api/page.mdx
+++ b/examples/nextra/mistral/src/app/api/page.mdx
@@ -1,6 +1,9 @@
 ---
 sidebarTitle: About
 ---
+
+import "@speakeasy-api/docs-md-react/nextra.css";
+
 import {
   Pill
 } from "@speakeasy-api/docs-md-react";
