--- a/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
@@ -1,6 +1,9 @@
 ---
 sidebarTitle: Embeddings
 ---
+
+import "@speakeasy-api/docs-md-react/nextra.css";
+
 import {
   CodeSample,
   ExpandableBreakout,
