--- a/examples/nextra/pokeapi/src/app/api/endpoint/pokemon/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/pokemon/page.mdx
@@ -1,6 +1,9 @@
 ---
 sidebarTitle: Pokemon
 ---
+
+import "@speakeasy-api/docs-md-react/nextra.css";
+
 import {
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
