Implemented support for top-level examples (#93)
* Implemented support for top-level examples

* Lint fix

--- a/examples/docusaurus/pokeapi/docs/api/endpoint/pokemon.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/pokemon.mdx
@@ -20,6 +20,7 @@ import {
   OperationDescriptionSection,
   OperationParametersSection,
   OperationResponseBodyDescriptionSection,
+  OperationResponseBodyExamplesSection,
   OperationResponseBodySection,
   OperationSecuritySection,
   OperationSummarySection,
@@ -7364,6 +7365,25 @@ This parameter can be a string or an integer.
   slot="content"
   id="operation-api_v2_pokemon_retrieve+responses+200+application-json"
 >
+
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+_Example:_
+
+```
+{
+  "id": 1,
+  "name": "Rambo",
+  "base_experience": 64,
+  "height": 7,
+  "is_legendary": false,
+  "is_mythical": false,
+  "order": 1,
+  "weight": 60
+}
+```
+
+</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
