--- a/examples/nextra/pokeapi/src/app/api/endpoint/pokemon/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/pokemon/page.mdx
@@ -19,6 +19,7 @@ import {
   OperationDescriptionSection,
   OperationParametersSection,
   OperationResponseBodyDescriptionSection,
+  OperationResponseBodyExamplesSection,
   OperationResponseBodySection,
   OperationSecuritySection,
   OperationSummarySection,
@@ -7363,6 +7364,25 @@ This parameter can be a string or an integer.
   slot="content"
   id="operation-api_v2_pokemon_retrieve_responses_200_application-json"
 >
+
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+_Example:_
+
+```
+{
+  "id": 1,
+  "name": "Rambo",
+  "base_experience": 64,
+  "height": 7,
+  "is_legendary": false,
+  "is_mythical": false,
+  "order": 1,
+  "weight": 60
+}
+```
+
+</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
