--- a/examples/nextra/mistral/src/app/api/endpoint/models/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/models/page.mdx
@@ -33,8 +33,7 @@ import {
   SectionContent,
   SectionTab,
   SectionTitle,
-  TabbedSection,
-  TryItNow
+  TabbedSection
 } from "@speakeasy-api/docs-md-react";
 
 # Models Operations [#models]
@@ -77,9 +76,10 @@ TypeScript
 
 <SectionContent slot="content" id="operation-list_models_v1_models_get_code-samples_typescript">
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -92,8 +92,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1180,9 +1182,10 @@ TypeScript
   id="operation-retrieve_model_v1_models_model_id_get_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1197,8 +1200,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -2255,9 +2260,10 @@ TypeScript
   id="operation-delete_model_v1_models_model_id_delete_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2272,8 +2278,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -2551,9 +2559,10 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2569,8 +2578,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3770,9 +3781,10 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3787,8 +3799,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -4028,9 +4042,10 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -4045,8 +4060,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
