--- a/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
@@ -28,8 +28,7 @@ import {
   SectionContent,
   SectionTab,
   SectionTitle,
-  TabbedSection,
-  TryItNow
+  TabbedSection
 } from "@speakeasy-api/docs-md-react";
 
 # Ocr Operations [#ocr]
@@ -66,9 +65,10 @@ TypeScript
 
 <SectionContent slot="content" id="operation-ocr_v1_ocr_post_code-samples_typescript">
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -89,8 +89,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
