--- a/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
@@ -32,8 +32,7 @@ import {
   SectionContent,
   SectionTab,
   SectionTitle,
-  TabbedSection,
-  TryItNow
+  TabbedSection
 } from "@speakeasy-api/docs-md-react";
 
 # Agents Operations [#agents]
@@ -76,9 +75,10 @@ TypeScript
   id="operation-agents_completion_v1_agents_completions_post_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -99,8 +99,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3773,9 +3775,10 @@ TypeScript
 
 <SectionContent slot="content" id="operation-stream_agents_code-samples_typescript">
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3798,8 +3801,10 @@ async function run() {
   }
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
