--- a/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
@@ -32,8 +32,7 @@ import {
   SectionContent,
   SectionTab,
   SectionTitle,
-  TabbedSection,
-  TryItNow
+  TabbedSection
 } from "@speakeasy-api/docs-md-react";
 
 # Beta Agents Operations [#beta/agents]
@@ -134,9 +133,10 @@ TypeScript
 
 <SectionContent slot="content" id="operation-agents_api_v1_agents_list_code-samples_typescript">
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -149,8 +149,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1448,9 +1450,10 @@ TypeScript
   id="operation-agents_api_v1_agents_create_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1466,8 +1469,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3811,9 +3816,10 @@ TypeScript
 
 <SectionContent slot="content" id="operation-agents_api_v1_agents_get_code-samples_typescript">
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3828,8 +3834,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -5119,9 +5127,10 @@ TypeScript
   id="operation-agents_api_v1_agents_update_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -5137,8 +5146,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -7506,9 +7517,10 @@ TypeScript
   id="operation-agents_api_v1_agents_update_version_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -7524,8 +7536,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
