--- a/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
@@ -29,8 +29,7 @@ import {
   SectionContent,
   SectionTab,
   SectionTitle,
-  TabbedSection,
-  TryItNow
+  TabbedSection
 } from "@speakeasy-api/docs-md-react";
 
 # Embeddings Operations [#embeddings]
@@ -76,9 +75,10 @@ TypeScript
   id="operation-embeddings_v1_embeddings_post_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -97,8 +97,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
