--- a/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
@@ -32,8 +32,7 @@ import {
   SectionContent,
   SectionTab,
   SectionTitle,
-  TabbedSection,
-  TryItNow
+  TabbedSection
 } from "@speakeasy-api/docs-md-react";
 
 # Fim Operations [#fim]
@@ -82,9 +81,10 @@ TypeScript
   id="operation-fim_completion_v1_fim_completions_post_code-samples_typescript"
 >
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -101,8 +101,10 @@ async function run() {
   console.log(result);
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1470,9 +1472,10 @@ TypeScript
 
 <SectionContent slot="content" id="operation-stream_fim_code-samples_typescript">
 
-<TryItNow
-  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
+<CodeSample>
+
+```typescript
+import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1491,8 +1494,10 @@ async function run() {
   }
 }
 
-run();`}
-/>
+run();
+```
+
+</CodeSample>
 
 </SectionContent>
 
