Added examples to debug placeholders (#95)

--- a/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
@@ -7,12 +7,14 @@ import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
   CodeSample,
+  DebugPlaceholder,
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
   ExpandableBreakoutDescription,
   ExpandableBreakoutExamples,
   ExpandableBreakoutTitle,
   ExpandableProperty,
+  ExpandablePropertyDefaultValue,
   ExpandablePropertyDescription,
   ExpandablePropertyExamples,
   ExpandablePropertyTitle,
@@ -20,8 +22,11 @@ import {
   Operation,
   OperationCodeSamplesSection,
   OperationDescriptionSection,
+  OperationRequestBodyDescriptionSection,
+  OperationRequestBodyExamplesSection,
   OperationRequestBodySection,
   OperationResponseBodyDescriptionSection,
+  OperationResponseBodyExamplesSection,
   OperationResponseBodySection,
   OperationSummarySection,
   OperationTitleSection,
@@ -150,6 +155,43 @@ with Mistral(
 
 <SectionContent slot="content">
 
+<OperationRequestBodyDescriptionSection slot="request-body-description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</OperationRequestBodyDescriptionSection>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+requestBody:
+  content:
+    application/json:
+      examples:
+        example1:
+          value: {}
+```
+
+</DebugPlaceholder>
+
+</OperationRequestBodyExamplesSection>
+
 <ExpandableSection>
 
 <ExpandableProperty
@@ -173,6 +215,39 @@ with Mistral(
 Text to embed.
 
 </ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -208,6 +283,22 @@ mistral-embed
 
 </ExpandablePropertyExamples>
 
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
 </ExpandableProperty>
 
 <ExpandableProperty
@@ -216,7 +307,7 @@ mistral-embed
   headingId="operation-embeddings_v1_embeddings_post+request+output_dimension"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasFrontMatter={false}
+  hasFrontMatter={true}
   expandByDefault={true}
 >
 
@@ -226,6 +317,55 @@ mistral-embed
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
 </ExpandableProperty>
 
 <ExpandableProperty
@@ -234,7 +374,7 @@ mistral-embed
   headingId="operation-embeddings_v1_embeddings_post+request+output_dtype"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasFrontMatter={false}
+  hasFrontMatter={true}
   expandByDefault={true}
 >
 
@@ -243,6 +383,55 @@ mistral-embed
 ##### output_dtype \{#operation-embeddings_v1_embeddings_post+request+output_dtype\}
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -284,6 +473,27 @@ Successful Response
 
 </OperationResponseBodyDescriptionSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+requestBody:
+  content:
+    application/json:
+      examples:
+        example1:
+          value: {}
+```
+
+</DebugPlaceholder>
+
+</OperationResponseBodyExamplesSection>
+
 <ExpandableSection>
 
 <ExpandableProperty
@@ -292,7 +502,7 @@ Successful Response
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasFrontMatter={false}
+  hasFrontMatter={true}
   expandByDefault={true}
 >
 
@@ -302,6 +512,55 @@ Successful Response
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
 </ExpandableProperty>
 
 <ExpandableBreakout
@@ -309,7 +568,7 @@ Successful Response
   id="data_EmbeddingResponseData"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata"
   parentId="data"
-  hasFrontMatter={false}
+  hasFrontMatter={true}
   expandByDefault={false}
 >
 
@@ -321,13 +580,50 @@ Successful Response
 
 <ExpandableBreakoutDescription slot="description">
 
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
 </ExpandableBreakoutDescription>
 
 <ExpandableBreakoutExamples slot="examples">
 
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
 </ExpandableBreakoutExamples>
 
 <ExpandableBreakoutDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
 
 </ExpandableBreakoutDefaultValue>
 
@@ -340,7 +636,7 @@ Successful Response
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasFrontMatter={false}
+  hasFrontMatter={true}
   expandByDefault={false}
 >
 
@@ -349,6 +645,55 @@ Successful Response
 ##### embedding \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+embedding\}
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -369,6 +714,22 @@ Successful Response
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -378,6 +739,22 @@ _Example:_
 ```
 
 </ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -398,6 +775,22 @@ _Example:_
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -407,6 +800,22 @@ embedding
 ```
 
 </ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -426,6 +835,22 @@ embedding
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -435,6 +860,22 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
 ```
 
 </ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -454,6 +895,22 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -463,6 +920,22 @@ mistral-small-latest
 ```
 
 </ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -482,6 +955,22 @@ mistral-small-latest
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -492,6 +981,22 @@ chat.completion
 
 </ExpandablePropertyExamples>
 
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
 </ExpandableProperty>
 
 <ExpandableProperty
@@ -500,7 +1005,7 @@ chat.completion
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage"
   typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasFrontMatter={false}
+  hasFrontMatter={true}
   expandByDefault={true}
 >
 
@@ -509,6 +1014,55 @@ chat.completion
 ##### usage \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage\}
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -529,6 +1083,22 @@ chat.completion
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -538,6 +1108,22 @@ _Example:_
 ```
 
 </ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -558,6 +1144,22 @@ _Example:_
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -567,6 +1169,22 @@ _Example:_
 ```
 
 </ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -587,6 +1205,22 @@ _Example:_
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -596,6 +1230,22 @@ _Example:_
 ```
 
 </ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
