--- a/examples/docusaurus/mistral/docs/api/index.mdx
+++ b/examples/docusaurus/mistral/docs/api/index.mdx
@@ -6,6 +6,7 @@ sidebar_label: About
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
+  DebugPlaceholder,
   Pill
 } from "@speakeasy-api/docs-md-react";
 
@@ -22,3 +23,17 @@ Servers
 # Global Security
 
 ### ApiKey <Pill variant="info">bearer</Pill> <Pill variant="info">http</Pill> \{#ApiKey\}
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+securitySchemes:
+  APIKey:
+    description: My API key description
+```
+
+</DebugPlaceholder>
